--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,19 +9,24 @@
   weight = 10
 
 [[main]]
+  name = "People"
+  url = "#people"
+  weight = 20
+
+[[main]]
   name = "Posts"
   url = "#posts"
-  weight = 20
+  weight = 30
 
 [[main]]
   name = "Projects"
   url = "#projects"
-  weight = 30
+  weight = 40
 
 [[main]]
   name = "Publications"
   url = "#featured"
-  weight = 40
+  weight = 50
 
 [[main]]
   name = "Contact"
